k8s/customer-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: customer-service
  namespace: fintech-dev
spec:
  type: ClusterIP
  selector:
    app: customer-service
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
